kubernetes_manifests/grafana-service-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-ext
  namespace: productionnamespace
spec:
  selector:
    app: grafana
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
  type: LoadBalancer

  D:\abcd\3-tier-app-CI-CD-\kubernetes_manifests\grafana-service-production copy.yam
