kubernetes_manifests/grafana-service-testing.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-ext
  namespace: testingnamespace
spec:
  selector:
    app: grafana
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
  type: LoadBalancer
